added mvc to the server setup

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "amozan",
   "version": "1.0.0",
   "description": "An Amazon-like clone",
-  "main": "src/pages/index.html",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "open src/pages/index.html"
+    "test": "export NODE_ENV=test&& jasmine",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/NG-Rich/amozan/issues"
   },
-  "homepage": "https://github.com/NG-Rich/amozan#readme"
+  "homepage": "https://github.com/NG-Rich/amozan#readme",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "axios": "^0.20.0",
+    "jasmine": "^3.6.1"
+  }
 }
